--- a/XiaomiParts/res/xml/preferences_xiaomi_parts.xml
+++ b/XiaomiParts/res/xml/preferences_xiaomi_parts.xml
@@ -76,6 +76,17 @@
                 android:targetPackage="org.lineageos.settings.kcal" />
         </Preference>
 
+        <Preference
+            android:key="lcd_features_settings" 
+            android:icon="@drawable/ic_cabc"
+            android:title="@string/lcd_features_title"
+            android:summary="@string/lcd_features_summary" >
+            <intent 
+                android:action="android.intent.action.MAIN" 
+                android:targetClass="org.lineageos.settings.device.display.LcdFeaturesPreferenceActivity"
+                android:targetPackage="org.lineageos.settings.device.display" />
+        </Preference>
+
         <SwitchPreference
             android:key="fps_info"
             android:icon="@drawable/ic_fps_info"
